--- a/05_challenge_game/game/app/build.gradle
+++ b/05_challenge_game/game/app/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13.2'
 
+    // Use Mockito test framework.
+    testImplementation "org.mockito:mockito-core:3.+"
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.0.1-jre'
 }
